--- a/why_people_participate.adoc
+++ b/why_people_participate.adoc
@@ -50,7 +50,7 @@ A final motivator in this category is what researchers call "own-use value" but 
 
 As noted earlier, motivations for many things are multi-faceted and contributing to open source software is no exception. However, here are three takeaways that you may find useful.
 
-*Don't expect non-extrinsic motivators to carry too much of the load.* _Many do contribute to open source projects for idealistic or altruistic reasons. But those are usually not the sole motivators and may not even be an important ones. Especially in the case of projects that have commercial backing, pay, and other professional working benefits matter a great deal._
+*Don't expect non-extrinsic motivators to carry too much of the load.* Many do contribute to open source projects for idealistic or altruistic reasons. But those are usually not the sole motivators and may not even be an important ones. Especially in the case of projects that have commercial backing, pay, and other professional working benefits matter a great deal.
 
 *Ampily non-extrinsic motivators such as learning and peer recognition.* While not replacements for more direct benefits, the opportunity to be recognized by peers and to work in new technology areas are motivators. Organizations should consider peer recognition programs and explicitly encourage learning in order to make the best use of these motivational factors.
 
