Added remaining citations

--- a/community-manager-self-care.adoc
+++ b/community-manager-self-care.adoc
@@ -92,7 +92,7 @@ And yet community managers may tend to over-compensate, attempting to live up to
 But there's a difference between being _in_ control, being _controlled_, and being _under_ control.
 
 The belief that being "in control" is a reflection of our confidence in what we produce is inaccurate.
-It actually demonstrates that we are reluctant to show others that we are not perfect and struggle to accept anything less.
+It actually demonstrates that we are reluctant to show others that we are not perfect and struggle to accept anything less.footnote:[Alex Budak, https://www.huffpost.com/entry/in-control-vs-under-control-leadership_b_12590650[In-Control vs. Under-Control Leadership]]
 Although maintaining this front can help shield us temporarily from others' emotions and criticisms towards us, it doesn't protect us from our own self-destruction caused by bottling them up.
 
 The consequences of suppressing your emotions will inevitably surface, and dramatically so.
@@ -113,7 +113,7 @@ Maintaining this kind of emotional labor can be incredibly exhausting.
 We must acknowledge and accept that being perfect is unattainable, and more importantly, not a requirement for being a great leader.
 What _is_ important is that people can relate to your human side.
 
-People gravitate to others with whom they share a kinship, and being able to identify this feeling of kinship is one hallmark of an effective community manager.
+People gravitate to others with whom they share a kinship.footnote:[Psychologyt Today , https://www.psychologytoday.com/gb/blog/close-encounters/201812/why-do-we-people-who-are-similar-us[Why Do We Like People Who Are Similar to Us?]], and being able to identify this feeling of kinship is one hallmark of an effective community manager.
 If your members see that you possess qualities they can relate to, they can more easily empathize with you.
 Ironically, we often emphasis the significance of practicing empathy for our members or team, but it's equally important that our members demonstrate compassion, and gratitude towards us too.
 
