--- a/community-manager-self-care.adoc
+++ b/community-manager-self-care.adoc
@@ -1,6 +1,8 @@
 = Community Manager Self-Care
 Authors: Ashley Nicolson <ashley@scotlandopensource.com>
 Updated: 2020-07-09
+Edited: 2020-08-11 (AJN)
+Status: draft
 
 == Disclaimer
 
