--- a/developing_a_metrics_plan.adoc
+++ b/developing_a_metrics_plan.adoc
@@ -1,38 +1,160 @@
-= Developing a Metrics Plan/Community Metrics
-Authors: Ray Paik
-Updated: 2020-07-06
+= Understanding Community Metrics
+Authors: Ray Paik, Brian Proffitt <bproffit@redhat.com>, Bryan Behrenshausen <bbehrens@redhat.com>
+Updated: 2020-09-17
 
+== Introduction: What's a "healthy" open source community?
+A healthy open source community is one that demonstrates open practices, uses open infrastructure, and cultivates an open culture with the goal of becoming more sustainable. But even for the most seasoned community managers and community architects, measuring an open source community's health is a complex, difficult, and occasionally intimidating task.
 
-== *Why metrics are important in Open Source communities*
+That's because any picture of project health is actually a mosaic; multiple factors combine to depict a community's overall health. You'll never find just one indicator you can point to and say "See? The community is healthy."
 
-=== *Provide objective measures*
+What's more, the factors that determine overall project and community health are always changing. In the past, for example, some may have pointed to *total number of downloads* as a health metric. But today we understand that even millions of downloads does not reflect the fact that a communuity's production and quality assurance processes might be out of sync—or that trolls are running rampant in the project's mailing lists.
+
+This chapter outlines several ways to measure community health, many of them centered not only on *results* or *outcomes* (like downloads, release cadence, etc.), but also around *processes* (onboarding barriers, how easily a project can discover and promote maintainers, etc.). The chapter also outlines a few important factors to consider wehn assessing an open source project's and community's overall health. It focuses specifically onkey metrics you can use to gauge, assess, and report that health.
+
+== Why community metrics are important
+
+Establishing and maintaining community metrics is important for several reasons, including:
+
+- Providing objective measures
+- Promoting a culture of transparency
+- Encouraging community participation
+- Identifying potential community bottlenecks
+
+Let's explore each of these in more detail.
+
+=== Providing objective measures
 For any organization, you want to have a set of objective measurement to help you understand how you are performing. For businesses, it could be things like revenue, new customer aquisitions, costs, etc. that you can look at periodically (e.g. quarter-over-quarter) to see how you are progressing. For open source projects, it is also helpful to have a set of metrics that can help measure the health of your community.  These could include things like number of contributors, how long it takes to close bugs/issues, responsiveness of reviewers, contributor diversity, etc. 
 
-=== *Transparency*
+=== Promoting a culture of transparency
 Transparency is a key ingredient in all open source projects, so it is important to have insight into all contributors to your project. This isn't necessarily to rank or highlight the most active contributors. Rather, this is to get a better sense of where the contributions are coming from (e.g. different geography, organizations, etc.). When you start going beyond 20-30 community members, it starts to become more challenging to have a good insight into all contributors if you don't have a good set of metrics. 
 
-=== *Encourage community participation*
-Community metrics will not necessarily provide a full picture of the community, but they do offer important insight into the state of the community. For example, metrics can show if there are regular activities on project's code, bugs/issues, documentation, etc. for the project. Also, when people join a new community, they typically struggle with identifying and connecting with more experienced members.  If the metrics dashboard includes a list of active documentation contributors, that could be useful for anyone interested in contributing to project documentation.  Some communities even have a dashboard of _first time_ contributors to highlight new community members. These may seem like small things, but they could go a long way to help new community members onboard into a project and feel welcome. 
+=== Encouraging community participation
+Community metrics will not necessarily provide a full picture of the community, but they do offer important insight into the state of the community. For example, metrics can show if there are regular activities on project's code, bugs/issues, documentation, etc. for the project. Also, when people join a new community, they typically struggle with identifying and connecting with more experienced members.  If the metrics dashboard includes a list of active documentation contributors, that could be useful for anyone interested in contributing to project documentation.  Some communities even have a dashboard of _first time_ contributors to highlight new community members. These may seem like small things, but they could go a long way to help new community members onboard into a project and feel welcome.
 
-=== *Identify potential bottlenecks in the community*
+=== Identifying potential community bottlenecks
 As open source projects grow, you will typically face challenges with responsiveness to community members. For example, code reviews may take longer or you may see a growing backlog of issues. If you have a good set of metrics (e.g. average time to close issues, median time for code review, etc.) that you review on a regular basis, they could serve as early warning signs before you start to have a number of dissatisfied community members. 
 
-== *Choosing the right metrics for your community*
-No two open source communities are the same, so it's natural for each community to have their own set of metrics. There are many factors that can influence what metrics are right for your community. In many communities, you often see emphasis on the speed of merging code. However, if your project is in a heavily regulated industry (e.g. energy, medicine, etc.) where decision to merge new fixes/features can take a long time, you probably would not have several different metrics for _code review efficiency_.  
+== Basic considerations
+Before you determine *how* you will measure project and community health, you'll need to determine *what* you're going to measure. You might begin by looking at:
 
-As you are developing a set of community metrics, it is important to work with community members to get their input and have many people contribute to the community metrics. Hearing from a diverse group of the community is important to ensure that the metrics are inclusive and not just focusing on the work of a subset of the community. For example, if internationalization is important for your project, you want to ensure that your metrics reflect internationalization work. It's also a good practice to review the metrics periodically with the community and discuss if any adjustments are needed for your metrics. Even within the same community, you will likely need to evolve your metrics along with the community as your needs change.
+- Project life cycle
+- Target audience
+- Governance
+- Project leaders
+- Release manager and process
+- Infrastructure
+- Goals and roadmap
+- Onboarding processes
+- Internal communication
+- Outreach
+- Awareness
+- Ecosystem
 
-== Resourcea for developing metrics for your community
+Let's examine each one of these in more detail.
 
-=== *Take advantage of available resources in your software tools*  
+=== Project life cycle
+An open source project's life cycle affects many other considerations about a project's health. Understanding the project's place in that life cycle will help you contextualize your assessment (e.g., single-person governance can be common when a project is young—but less effective when a project is more mature). Monitoring contributor trends might reveal critical information about a project's short-term or long-term future.
+
+When assessing the project's life cycle, consider questions like:
+
+- When was the project founded, and how old is it?
+- How often do new contributors join the project?
+- How frequently does the project accept new contributions?
+
+=== Target audience
+Well-run open source projects demonstrate a clear understanding of the users (and contributors) they hope to assist and engage. When assessing a project's target audience, consider questions like:
+
+- Has the project clearly identified a target audience, and who is it?
+- Is the target audience the most appropriate one for this project?
+- Does the target audience engage with competing or complementary projects?
+
+=== Governance
+Governance refers to the rules and customs that define who does what in an open source project and how they are supposed to do it. Healthy projects entail thoroughly documented (and continuously evolving) governance models. When assessing a project's governance, consider questions like:
+
+- What is the project's governance model, and is it publicly documented?
+- Does the model account for both technical and business concerns?
+- How do project members make and enforce decisions?
+
+=== Project leaders
+In healthy projects, leaders are visible and easily identifiable. Leaders often coordinate project work and establish a project's vision, and usually have extensive knowledge of project history. When assessing a project's leadership, consider questions like:
+
+- Who are the project leaders?
+- What are the project leaders' responsibilities, and are they focused more on engineering, marketing, or some combination of both?
+
+=== Release manager and process
+In healthy projects, members have formally documented release processes and identified release managers to supervise those processes. When assessing a project's release manager and process, consider questions like:
+
+- Is the project's release process documented?
+- Does the project have an identified release manager?
+- How often do project release updates occur?
+- Do project releases occur on a steady and predictable schedule?
+
+=== Infrastructure
+The tools a community uses to collaborate on a project are almost as important as the people who comprise that community. The most successful projects are those that have the tools they need to do their work—and keep those tools in good working order. When assessing a project's infrastructure, consider questions like:
+
+- Does the project have the necessary infrastructure?
+- Are infrastructural deficits producing bottlenecks for the project?
+- Who is responsible for maintaining project infrastructure?
+- Is the project missing useful infrastructural components, and if so, does the community plan to obtain these components?
+
+=== Goals and roadmap
+Healthy open source projects have publicly shared goals and clear processes for reaching those goals. Goals are attainable and clear deadlines exist for tracking progress toward those goals. When assessing a project's goals and roadmap, consider questions like:
+
+- Are project goals clear and public?
+- Does the project have a clearly communicated process, and is it also public?
+- Do project participants have a history of meeting project deadlines?
+
+=== Onboarding processes
+New contributors are vital to project innovation and success. Healthy projects feature clear, welcoming onboarding materials that assist newcomers who wish to participate in the project. When assessing a project's onboarding processes, consider questions like:
+
+- Does documentation explain precisely what the project is and how to use it?
+- Does documentation help new contributors get involved in the project?
+- Does the project accept contributions of more than one type (e.g., development, marketing, project management, event planning)?
+
+=== Internal communication
+Communication channels are key indicators of project health, as are a project's internal communication practices. Issues affecting community health often emerge first in internal channels—such as mailing lists or chat platforms—where contributors and users interact. When assessing a project's internal communication, consider questions like:
+
+- Does the project have sufficient communication channels?
+- Can people find and use these channels effectively?
+- Are channels regularly moderated?
+- Is channel communication governed by a code of conduct?
+
+=== Outreach
+Outreach is the process of actively promoting a project and making others aware of it. Communities use written materials (e.g., social media, blogs, whitepapers), events (e.g., meetups, conventions), and educational tactics (e.g., demos, training sessions) for outreach. Healthy projects have adequate energy and resources devoted to outreach. When assessing a project's outreach efforts, consider questions like:
+
+- Does the community use clear and consistent methods for outreach? If not, does it plan to establish a set of outreach methods?
+- Are people writing, talking about, and promoting this project and its technologies?
+
+=== Awareness
+The project's target audience must be aware of the project and understand the problems it solves. Awareness is a desired outcome of a project's outreach efforts and can be measured through user and contributor surveys or general marketing analyses. When assessing a project's awareness, consider questions like:
+
+- Is the target audience aware of the project?
+- Can people in the target audience explain the project's uses, features, and advantages over alternatives?
+- Do others working in an industry that would benefit from the project know the project exists?
+
+=== Ecosystem
+No project exists in a vacuum. Projects frequently depend on one another. In some cases, similar projects can be competing to reach the same target audiences. A community's interactions with other projects in its ecosystem reflect the project's health. When assessing a project's ecosystem, consider questions like:
+
+- What are the project's dependencies and what projects depend on it?
+- Is the community sufficiently integrated into the overall project ecosystem, target industry, and organizations that may use the project?
+- Do members of that ecosystem view this project favorably?
+
+== Choosing the right metrics for your community
+Because no two open source communities are the same, every community will naturally have its own set of metrics for measuring health and success. Many factors can influence a community's choice of metrics. Some communities, for example, emphasize how quickly they're able to merge code—so they track metrics related to this ability. Other community's consist of users and contributors working in heavily regulated industries (like energy or health care), where neceszsity dictates that decisions to merge new fixes/features take a long time. Those communities probably wouldn't emphazize speed of code review as much as others (more likely, they'd have different measures of code review efficiency).
+
+Communities should always establish metrics collaboratively and agree on them colectively. Hearing from a diverse group of community members is important for ensuring the metrics are inclusive and not just focusing on the work of a subset of the community. For example, if internationalization is important for your project, you want to ensure that your metrics reflect internationalization work. It's also a good practice to review the metrics periodically with the community and discuss if any adjustments are needed for your metrics. Even within the same community, you will likely need to evolve your metrics along with the community as your needs change.
+
+== Resources for developing metrics for your community
+
+=== Take advantage of available resources in your software tools
 In the past, many people wrote complex scripts/queries to get metrics for their communities. Nowadays, most of the software tools (code repositories, forums, issue trackers, wiki's, etc.) that open source projects typically use have APIs, plug-ins or even built-in dashboards that makes it easy collect data for your community. So if you use tools like Discourse, GitHub, GitLab, Jira, or others, you may be able to save a lot of time by reading their documentations prior to implementing a new set of metrics from scratch. 
 
-=== *The CHAOSS project* 
+=== The CHAOSS project
 Not surprisingly, there's an open source project that is focused on community metrics. The project is called CHAOSS (Community Health Analytics for Open Source software) and it has community members from academia, companies that participate in many open source projects, open source foundations, and others. If you visit the https://chaoss.community[CHAOSS website], you will find details on metrics across different categories plus implementation examples for many of these metrics.  
 
 If you browse through CHAOSS metrics, you will likely find plenty of metrics (and implementation) that will be applicable to your community. If you have an idea for new metrics that is not yet in CHAOSS, you can also start a discussion on a new metrics in the CHAOSS community. 
 
-=== *Resources/examples from other communities*  
+=== Resources/examples from other communities
 A number of open source communities have good documentation/code for their community dashboards that many other communities can take advantage of. Many readers may be familiar with the https://k8s.devstats.cncf.io/[CNCF dashboard] and you can find details on their `devstats` project for their dashboard in the CNCF's repo at https://github.com/cncf/devstats. 
 
 Another good example is the https://contributors.rubyonrails.org/contributors[Ruby community dashboard] and their https://contributors.rubyonrails.org/faq[FAQ page], which provides good insight into why they developed the dashboard and some of their implementation decisions. 
@@ -60,18 +182,11 @@ Beyond these shortcoming sof metrics in general, the following are particularly 
 Finally, here are some dos and don'ts when you are working open source community metrics. 
 
 === Dos: 
-
 - Make metrics public: This maybe stating the obvious, but transparency in open source should also extend to metrics. When you develop metrics, it helps to include a diverse group of people in the process so that metrics are inclusive and consider all contributions. Also, if any adjustments need to be made for your community metrics, it's likely that we will first get that feedback/suggestion from community members. Also, all metrics  and should be open to everyone so there is confidence in the data.  
-
 - Use metrics for spotting outliers: Metrics are particularly useful for highlighting areas that aren't doing well. Good examples are things related to throughput such as time it takes for close issues, forum posts to be answered, code review, etc. In these examples, metrics are a great tool that can help identify potential bottlenecks early. 
-
 - Use metrics as a starting point for gaining further insight into community health: Metrics may tell you _what_ is happening in your community, but you typically will not know the _why_ just by looking at the numbers. If the metrics shows that the number of first time contributors are declining, you will probably need to have some hallway or phone conversations in order to identify the causes of the decline. Metrics will highlight the symptoms as a starting point, but people will then have to do the work from there. 
 
 === Dont's: 
-
 - Using metrics as a sole basis for rewards: We already discussed gaming of contribution metrics previously if you only rely on metrics for rewards in the community. In addition, if people percieve that rewards and recognition are mostly based on the volume of work (or input), you run the risk of discouraging people who aren't able to devote as much time to the project or people who are getting started in the community. People do not joining open source communities just to do more work and we do not want to lose sight of their intrinsic motivation. 
-
 - Presenting metrics without a proper context: Even when you get asked what sounds like a straightforward question like "how many contributors do you have in your community?", it is always helpful to get some context behind the question. Depending on who is asking the question, they're usually asking for something slightly different. For example, the total number of contributors in project's history maybe appropriate in one context, but in another the growth of contributors over a time period maybe what the questioner is really after. Also what do they mean by contributors? Do they also want to include people contributing to internationalization, issue triage, etc.? So before we simply point people to a set of metrics, it is helpful to understant the context or even motivation behind their question. 
-
 - Ignoring non-metrics: As discussed previously, not everything is easily measurable or quantifiable. Even if we have a well defined and polished metrics dashboard, it should not stop us from continuing to have human conversation with community members to keep a pulse on what is happening in the community and encourage community members to point us to what we are not able to see in our metrics. 
-
